kitten/reported_bugs/rust/rust-83919/stderr.txt
error[E0658]: `impl Trait` in type aliases is unstable

 --> mutant.rs:2:10

  |

2 | type X = impl Clone ;

  |          ^^^^^^^^^^

  |

  = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

  = help: add `#![feature(min_type_alias_impl_trait)]` to the crate attributes to enable



warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes

 --> mutant.rs:1:17

  |

1 | # ! [ feature ( type_alias_impl_trait ) ]

  |                 ^^^^^^^^^^^^^^^^^^^^^

  |

  = note: `#[warn(incomplete_features)]` on by default

  = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information



error[E0282]: type annotations needed

 --> mutant.rs:7:8

  |

7 | bar ( |_| ( ) )

  |        ^ consider giving this closure parameter a type



error: internal compiler error: compiler/rustc_mir/src/borrow_check/universal_regions.rs:533:26: expected defining type for `DefId(0:8 ~ mutant[8787]::foo::{closure#0})`: `[type error]`

 --> mutant.rs:7:7

  |

7 | bar ( |_| ( ) )

  |       ^^^^^^^



thread 'rustc' panicked at 'Box<dyn Any>', /rustc/eab201df7028ebb6812c0b1a01702ac6ecfcceed/compiler/rustc_errors/src/lib.rs:953:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.54.0-nightly (eab201df7 2021-06-09) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [mir_borrowck] borrow-checking `foo::{closure#0}`

#1 [type_of] computing type of `X::{opaque#0}`

end of query stack

error: aborting due to 3 previous errors; 1 warning emitted



Some errors have detailed explanations: E0282, E0658.

For more information about an error, try `rustc --explain E0282`.

